tests/should-fail/bad-globals-native.j
native GetObjectName takes integer id returns string

globals
    string foo = GetObjectName('hpea')
endglobals
